// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FellowDashboards /> should call activate account 1`] = `
<Fragment>
  <FellowDashboard
    activateCadreEngineerAccount={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "push": [MockFunction],
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    d1EngineerData={Array []}
    fetchAllVacancies={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    getCadreEngineers={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    loading={false}
    role={
      Object {
        "Andelan": "jey",
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    user={
      Object {
        "name": "Test User",
        "roles": Object {
          "Andelan": "jey",
        },
      }
    }
  />
</Fragment>
`;

exports[`<FellowDashboards /> should render well 1`] = `
<FellowDashboards
  activateCadreEngineerAccount={[Function]}
  d1EngineerData={
    Array [
      Object {
        "account_active": false,
        "email": "chidozie.nwoga@andela.com",
        "id": 1,
      },
    ]
  }
  fetchAllVacancies={[Function]}
  getCadreEngineers={[Function]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  loading={false}
  role={
    Object {
      "Andelan": "jey",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  user={
    Object {
      "name": "Test User",
      "roles": Object {
        "Andelan": "jey",
      },
    }
  }
/>
`;
